@@ -7,15 +7,16 @@
 	 difficulty="2"
 	 author="Bruno Coudoin (bruno.coudoin@free.fr)"
 	 boarddir="">
-	 <_title>Simplified Master Mind</_title>
+	 <_title>Master Mind</_title>
 	 <_description>Tux has hidden several items, find them back in the correct order</_description>
 	<_prerequisite></_prerequisite>
 	<_goal>Tux has hidden several items, find them back in the correct order</_goal>
 	 <_manual>
-This game is a simplified version of the original mastermind game.
+This game is an implementation of the original mastermind game.
 Click on the items until you find what you think is the correct answer.
 Then, click on the OK button in the control bar.
-Tux gives you an indication if you got a good position by marking the item with a black box.
+At the lower level, tux gives you an indication if you got a good position
+by marking the item with a black box.
 You can use the right mouse button to flip the colors in the oposite order.
 	 </_manual>
 	 <_credit>
