@@ -1,3 +1,9 @@
+2002-08-23  Bruno Coudoin  <bruno.coudoin@free.fr>
+
+	* boards/mastermind.xml.in: new board by bruno
+	* po/fr.po: updated
+	* src/boards/mastermind.c: new board by bruno
+
 2002-08-18  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	* boards/Makefile.am: added mastermind
